<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutHome"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignParentTop="true"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="16dip"
            android:layout_height="16dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/fanhui" />

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="菜单"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/btn_menu"
            android:layout_toRightOf="@id/btn_back"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/head_tab1"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/fanhui" />

            <Button
                android:id="@+id/head_tab2"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/fanhui" />

            <Button
                android:id="@+id/head_tab3"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/fanhui" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="2dp" >

        <!-- 功能模块按钮1 -->

        <LinearLayout
            android:id="@+id/t1Layout"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="@dimen/height_img_toolbar"
                android:layout_height="@dimen/height_img_toolbar"
                android:contentDescription="@string/string_bottom_tab01"
                android:scaleType="fitCenter"
                android:src="@drawable/m_home_normal" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_bottom_tab01"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/tab_text_size"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t2Layout"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="@dimen/height_img_toolbar"
                android:layout_height="@dimen/height_img_toolbar"
                android:contentDescription="@string/string_bottom_tab02"
                android:scaleType="fitCenter"
                android:src="@drawable/m_goods_normal" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_bottom_tab02"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/tab_text_size"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t3Layout"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/string_bottom_tab03"
                android:scaleType="fitCenter"
                android:src="@drawable/m_video_normal" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_bottom_tab03"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/tab_text_size"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t4Layout"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="@dimen/height_img_toolbar"
                android:layout_height="@dimen/height_img_toolbar"
                android:contentDescription="@string/string_bottom_tab04"
                android:scaleType="fitCenter"
                android:src="@drawable/m_category_normal" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_bottom_tab04"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t5Layout"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="@dimen/height_img_toolbar"
                android:layout_height="@dimen/height_img_toolbar"
                android:contentDescription="@string/string_bottom_tab05"
                android:scaleType="fitCenter"
                android:src="@drawable/m_mine_normal" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_bottom_tab05"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/layout_toolbar"
        android:background="#dee1e3" />

    <FrameLayout android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_line"></FrameLayout>

    <com.eryue.widget.AutoScrollViewPager.AutoScrollViewPager
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/viewPager"
        android:visibility="gone">

    </com.eryue.widget.AutoScrollViewPager.AutoScrollViewPager>


</RelativeLayout>